force-app/main/default/objects/Comp_Request__c/Comp_Request__c.object-meta.xml
<CustomObject>
    <description>Tracks casino comp requests submitted by staff on behalf of guests.</description>
    <label>Comp Request</label>
    <nameField>
        <displayFormat>CR-{000000}</displayFormat>
        <label>Comp Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comp Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>