force-app/main/default/objects/Comp_Request__c/fields/Comp_Type__c.field-meta.xml
<CustomField>
    <fullName>Comp_Type__c</fullName>
    <label>Comp Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Room</fullName>
            </value>
            <value>
                <fullName>Food &amp; Beverage</fullName>
            </value>
            <value>
                <fullName>Show Tickets</fullName>
            </value>
            <value>
                <fullName>Spa</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>