force-app/main/default/objects/Comp_Request__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Guest Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Comp Requests</relationshipLabel>
    <relationshipName>Comp_Requests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>