force-app/main/default/objects/Comp_Request__c/fields/Flagged_For_Review__c.field-meta.xml
<CustomField>
    <fullName>Flagged_For_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flagged For Review</label>
    <type>Checkbox</type>
</CustomField>