force-app/main/default/objects/Comp_Request__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Additional Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>