force-app/main/default/objects/Comp_Request__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitted By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Comp Requests</relationshipLabel>
    <relationshipName>Comp_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>